--- a/index.html
+++ b/index.html
@@ -304,9 +304,9 @@ transform:translate(-50%);
         </div>
         <nav>
             <ul>
-            <li><a href="http://gopal.link/twitter"><i class="fa fa-twitter" style="font-size:30px;"></i></a></li>
-	    <li><a href="http://gopal.link/linkedin"><i class="fa fa-linkedin" style="font-size:30px;"></i></a></li>
-	    <li><a href="http://gopal.link/github"><i class="fa fa-github" style="font-size:30px;"></i></a></li>
+            <li><a href="https://www.twitter.com/thegopal13"><i class="fa fa-twitter" style="font-size:30px;"></i></a></li>
+	    <li><a href="https://www.reddit.com/u/thegopal13"><i class="fa fa-reddit" style="font-size:30px;"></i></a></li>
+	    <li><a href="https://www.github.com/thegopal13"><i class="fa fa-github" style="font-size:30px;"></i></a></li>
             <li><a href="https://github.com/thegopal13/cvd"><i class="fa fa-code" style="font-size:30px;"></i></a></li>
             </ul>
         </nav>
